--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "edge": "^5.0.0",
     "express": "^4.13.4",
     "xml2js": "^0.4.16",
-    "xmldom": "^0.1.22"
+    "xmldom": "^0.1.22",
+    "xpath": "0.0.21"
   }
 }
