--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "xml2js": "^0.4.16",
     "xmldom": "^0.1.22",
     "xpath": "0.0.21"
+  },
+  "dependencies": {
+    "body-parser": "^1.14.2",
+    "express": "^4.13.4"
   }
 }
